# diffdelta-python

./: .gitignore  pyproject.toml
deploy/: Dockerfile  docker-compose.yml  env.example
deploy/github-action/: action.yml
deploy/kubernetes/: cronjob.yaml
deploy/systemd/: diffdelta-agent.service
diffdelta/: __init__.py  client.py  cursor.py  models.py
diffdelta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recipes/: discord_alerts.py  github_issues.py  pagerduty_trigger.py  run.py  slack_alerts.py
